# htcie

./: .gitignore  README.md  pyproject.toml  render.yaml  todo.md
.github/workflows/: docs.yml  tests.yml
data/correlations/convection_external/: churchill_bernstein_cylinder.yaml  zukauskas_cylinder.yaml
data/correlations/convection_internal/: churchill_ozoe_laminar.yaml  petukhov.yaml  shah_laminar.yaml  sieder_tate.yaml
docs/: build_docs.py  conf.py  index.rst  installation.rst
docs/api_reference/: index.rst
docs/architecture/: index.rst  scoring.rst
docs/correlations/: tube_banks.rst
notebooks/: README.md  benchmark.ipynb  examples.ipynb  gtm_demo.ipynb  htcie_report.html  sample_internal_convection_input.json
src/htcie/: __init__.py
src/htcie/api/: dependencies.py  main.py  schemas.py
src/htcie/cli/: main.py
src/htcie/core/: applicability.py  evaluator.py  explain.py  loader.py  pipeline.py  ranking.py  registry.py  results.py  state.py  uncertainty.py
src/htcie/domains/: _helpers.py  convection_external.py  convection_internal.py  tube_banks.py
src/htcie/gui/: __init__.py  main.py
src/htcie/reports/: __init__.py  renderer.py  schema.py  serializers.py
tests/golden/: README.md  internal_convection_cases.py
tests/integration/: test_api_cors.py  test_api_evaluate.py  test_api_smoke.py
tests/unit/: conftest.py  test_applicability.py  test_charts.py  test_evaluator_external.py  test_evaluator_internal.py  test_explain.py  test_gui_main.py  test_loader.py  test_pipeline.py  test_ranking.py  test_registry.py  test_renderer.py  test_reports.py  test_state.py  test_tube_banks.py  test_uncertainty.py
(+15 files in other folders)
