[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htcie"
version = "0.1.0"
description = "Heat Transfer Correlation Intelligence Engine"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Nick Bobolea" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.34",
  "pydantic>=2.10",
  "pyyaml>=6.0",
  "typer>=0.16",
  "rich>=14.0",
  "numpy>=2.0",
  "nicegui>=3.9.0",
  "plotly>=6.6.0",
  "jinja2>=3.1.6",
]

[project.optional-dependencies]
dev  = ["pytest>=8.3", "pytest-cov>=6.0", "ruff>=0.11", "mypy>=1.15", "httpx>=0.28", "twine>=6.0"]
docs = ["sphinx>=8.0", "sphinx-autodoc-typehints>=2.0", "furo>=2024.0", "myst-parser>=4.0"]
gui  = ["nicegui>=2.0", "plotly>=6.0"]

[project.scripts]
htcie     = "htcie.cli.main:app"
htcie-gui = "htcie.gui.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"htcie.reports" = ["templates/*.j2"]
"htcie.data" = ["correlations/**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
strict = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["plotly", "plotly.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "jupyterlab>=4.5.6",
    "twine>=6.2.0",
    "types-pyyaml>=6.0.12.20250915",
]
